@@ -305,10 +305,15 @@ asm(
 ".text\n"
 ".globl do_syscall_WRK\n"
 "do_syscall_WRK:\n"
+"	.cfi_startproc\n"
 "	push	%esi\n"
+"	.cfi_adjust_cfa_offset 4\n"
 "	push	%edi\n"
+"	.cfi_adjust_cfa_offset 4\n"
 "	push	%ebx\n"
+"	.cfi_adjust_cfa_offset 4\n"
 "	push	%ebp\n"
+"	.cfi_adjust_cfa_offset 4\n"
 "	movl	16+ 4(%esp),%eax\n"
 "	movl	16+ 8(%esp),%ebx\n"
 "	movl	16+12(%esp),%ecx\n"
@@ -318,10 +323,15 @@ asm(
 "	movl	16+28(%esp),%ebp\n"
 "	int	$0x80\n"
 "	popl	%ebp\n"
+"	.cfi_adjust_cfa_offset -4\n"
 "	popl	%ebx\n"
+"	.cfi_adjust_cfa_offset -4\n"
 "	popl	%edi\n"
+"	.cfi_adjust_cfa_offset -4\n"
 "	popl	%esi\n"
+"	.cfi_adjust_cfa_offset -4\n"
 "	ret\n"
+"	.cfi_endproc\n"
 ".previous\n"
 );
 
